--- a/SeleniumSolwit/UnitTestProject1/SPA_SeleniumTestProject.csproj
+++ b/SeleniumSolwit/UnitTestProject1/SPA_SeleniumTestProject.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{A3B2FABE-79EF-4EA5-ADA0-B44AC2D1E425}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestProject1</RootNamespace>
-    <AssemblyName>UnitTestProject1</AssemblyName>
+    <RootNamespace>SpaGuiTests</RootNamespace>
+    <AssemblyName>SpaGuiTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,19 +56,23 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="GuiTests.cs" />
     <Compile Include="Pages\BasicPage.cs" />
     <Compile Include="Pages\MainPage.cs" />
     <Compile Include="Pages\SearchPage.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
